--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       <p>For workshops, advocacy, partnerships, or assistance, please reach out.</p>
       <p><strong>Address:</strong><br><span class='upper-strong'>ARS MORIENDI PROJECT</span><br>592 The Alameda, Berkeley, CA 94707</p>
       <p><strong>Email:</strong> <a href='mailto:contact@arsmoriendiproject.online'>contact@arsmoriendiproject.online</a></p>
-      <p><strong>Phone:</strong> <a href='tel:+14792828075'>+1 479-282-8075</a></p>
+      <p><strong>Phone:</strong> <a href='tel:+14013175964'>+14013175964</a></p>
     </div>
     <form class='form card' onsubmit="event.preventDefault(); alert('Form endpoint not configured. Replace with your form service.');">
       <div class='card-body'>
@@ -39,7 +39,7 @@
     <div class="small">California Nonprofit Public Benefit • 501(c)(3) • EIN 85-4298754</div></div>
   <div><div class="small"><strong>Mission:</strong><br>We advance seniors’ rights and expand compassionate alternatives around aging, dying, and death.</div></div>
   <div><div class="small"><strong>Address:</strong><br>592 The Alameda<br>Berkeley, CA 94707<br>
-    <strong>Email:</strong> <a href="mailto:contact@arsmoriendiproject.online">contact@arsmoriendiproject.online</a><br><strong>Phone:</strong> <a href="tel:+14792828075">+1 479-282-8075</a></div></div>
+    <strong>Email:</strong> <a href="mailto:contact@arsmoriendiproject.online">contact@arsmoriendiproject.online</a><br><strong>Phone:</strong> <a href="tel:+14013175964">+14013175964</a></div></div>
 </div></footer>
 <script>
   const b=document.querySelector('.menu-toggle'), l=document.querySelector('.links');
