--- a/programs.html
+++ b/programs.html
@@ -37,7 +37,7 @@
     <div class="small">California Nonprofit Public Benefit • 501(c)(3) • EIN 85-4298754</div></div>
   <div><div class="small"><strong>Mission:</strong><br>We advance seniors’ rights and expand compassionate alternatives around aging, dying, and death.</div></div>
   <div><div class="small"><strong>Address:</strong><br>592 The Alameda<br>Berkeley, CA 94707<br>
-    <strong>Email:</strong> <a href="mailto:contact@arsmoriendiproject.online">contact@arsmoriendiproject.online</a><br><strong>Phone:</strong> <a href="tel:+14792828075">+1 479-282-8075</a></div></div>
+    <strong>Email:</strong> <a href="mailto:contact@arsmoriendiproject.online">contact@arsmoriendiproject.online</a><br><strong>Phone:</strong> <a href="tel:+14013175964">+14013175964</a></div></div>
 </div></footer>
 <script>
   const b=document.querySelector('.menu-toggle'), l=document.querySelector('.links');
